--- a/app/src/Modal/styles.css
+++ b/app/src/Modal/styles.css
@@ -1,13 +1,11 @@
 .Modal {
+
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.9);
 
-  /*background-color: rgba(244, 97, 82, 0.9);*/
-
   display: flex;
   padding-top: 10%;
-  /*align-items: center;*/
   justify-content: center;
 
   position: fixed;
@@ -16,6 +14,12 @@
 
   overflow: hidden;
   pointer-events: all;
+}
 
-  /*animation: fadein 100ms forwards;*/
+.Modal > div {
+  border-radius: 5px;
+  background-color: #fff;
+  padding: 2em;
+  height: 40%;
+  min-height: 320px;
 }
